# Sens

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  cut-release.yml  release.yml
docs/screenshots/: README.md
scripts/: gen-emoji.mjs  release-lib.mjs  release.mjs
scripts/__tests__/: release-lib.test.ts
src/: App.tsx  main.tsx  nav.ts  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  models.rs  repo.rs  service.rs
src-tauri/src/db/: migrations.rs  mod.rs  seed.rs
src/__tests__/: accountStats.test.ts  accounts.test.ts  brand.test.ts  category-tree.test.ts  format.test.ts  kinds.test.ts  logos.test.ts  mock-accounts.test.ts  mock-categories.test.ts  mock-splits.test.ts  mock.test.ts  postings.test.ts  providers.test.ts  sparkline.test.ts  txnBuilder.test.ts  txnFilters.test.ts  txnSelection.test.ts  txnTime.test.ts  updater.test.ts
src/assets/: emoji-data.json
src/client/: index.ts  invoke.ts  mock.ts
src/components/: ActionMenu.tsx  Brand.tsx  BulkPreviewSheet.tsx  EmojiPicker.tsx  Icon.tsx  ProviderLogo.tsx  Sidebar.tsx  Skeleton.tsx  Sparkline.tsx  TargetPicker.tsx  Toast.tsx  TopBar.tsx  TxnDetailPanel.tsx  TxnRow.tsx  TxnSelectionPanel.tsx  ui.tsx
src/lib/: accounts.ts  (+13 more)
(+49 files in other folders)
